--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name" translatable="false">Storage</string>
-    <string name="hello_">Hello everybody!</string>
-    <string name="activity_hello_world" translatable="false">Hello World</string>
+    <string name="app_name">Storage</string>
+    <string name="btn_storage">Storage</string>
+    <string name="NoAccessMsg">Сервис не запущен, теперь мы не можем показать вам кота:(</string>
+
 </resources>
